# panchanga_calendar

./: .gitignore  README.md  pyproject.toml
src/: get_data.py  get_html.py  make_calendar.py  time_info.py
src/data/: 2024-1.yaml  2024-10.yaml  2024-11.yaml  2024-12.yaml  2024-2.yaml  2024-3.yaml  2024-4.yaml  2024-5.yaml  2024-6.yaml  2024-7.yaml  2024-8.yaml  2024-9.yaml  2025-1.yaml  2025-10.yaml  2025-11.yaml  2025-12.yaml  2025-2.yaml  2025-3.yaml  2025-4.yaml  2025-5.yaml  2025-6.yaml  2025-7.yaml  2025-8.yaml  2025-9.yaml  2026-1.yaml  2026-10.yaml  2026-11.yaml  2026-12.yaml  2026-2.yaml  2026-3.yaml  2026-4.yaml  2026-5.yaml  2026-6.yaml  2026-7.yaml  2026-8.yaml  2026-9.yaml
